...
 }
 */
struct PhotoCell_Previews: PreviewProvider {
    @State static var photoItem = PhotoItem(image: UIImage(systemName: "play.square")!, title: "Music")
    static let index = 0
    static var previews: some View {
        PhotoCell(photo: $photoItem, isSelected: false, showDeleteButton: true, index: index, useFitzgeraldKeys: true,
                  onTapped: {}
        )
        .frame(width: 100, height: 100)
        //.border(Color.black, width: 1)
    }
}
...
